--- a/Project Notebooks/Project 5 Logistic Regression with Cross Validation and Test-Train Split.ipynb
+++ b/Project Notebooks/Project 5 Logistic Regression with Cross Validation and Test-Train Split.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The goal of this notebook is to take a dataset and produce a model that can predict the Survival Rate of passengers. Since the response variable is binary, meaning it can only take one of two values, the best bet is to do a Logitstic Regression. Logistic regression takes a linear combination of explanatory variables plus an intercept term, then it takes the result and passes it through the \"logistic\" function. I will use a logistic regression model that uses the following variables as predictors: Sex, Age, Embark Port, Passenger Class, Siblings/Spouse, Parent/Child and Fare. At the end of this notebook I will show the results of my model along with some Classification Metrics.\n",
+    "The goal of this notebook is to take a dataset and produce a model that can predict the Survival Rate of passengers. Since the response variable is binary, meaning it can only take one of two values, the best bet `MG: maybe be a bit more formal (e.g., \"best approach\")` is to do a Logitstic Regression. Logistic regression takes a linear combination of explanatory variables plus an intercept term, then it takes the result and passes it through the \"logistic\" function. I will use a logistic regression model that uses the following variables as predictors: Sex, Age, Embark Port, Passenger Class, Siblings/Spouse, Parent/Child and Fare. At the end of this notebook I will show the results of my model along with some Classification Metrics.\n",
     "\n",
     "H0: There is no relationship between the Survival Rate and the Predictors(Metioned Above).\n",
     "\n",
@@ -293,7 +293,7 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "VARIABLE DESCRIPTIONS:\n",
@@ -806,15 +806,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -854,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -1084,7 +1075,9 @@
     "# Check trained model intercept\n",
     "print model.intercept_\n",
     "# Check trained model coefficients\n",
-    "print model.coef_"
+    "print model.coef_\n",
+    "#MG You should display these along with the variable names.  I have no idea what I'm looking\n",
+    "#at here.  And you need to talk about the values--interpret them."
    ]
   },
   {
