--- a/Project Notebooks/Project 6 Decision Tree, Random Forest, AdaBoost and Gradient Boosting.ipynb
+++ b/Project Notebooks/Project 6 Decision Tree, Random Forest, AdaBoost and Gradient Boosting.ipynb
@@ -2578,9 +2578,7 @@
    "source": [
     "results = pd.DataFrame(result)\n",
     "votes=results[1]\n",
-    "results\n",
-    "\n",
-    "#JB ay, we lost our headers! Call them in your .DataFrame method"
+    "results"
    ]
   },
   {
@@ -3044,8 +3042,7 @@
     "dt = DecisionTreeRegressor(random_state=5)\n",
     "dtScore = cross_val_score(dt, X, y, cv=cv, n_jobs=-1)\n",
     "print ('The scores for the Decision Tree Regressor are:\\n {}\\n {}\\n {}').format(dtScore[0],dtScore[1],dtScore[2])\n",
-    "\n",
-    "#JB nice print!"
+    "\n"
    ]
   },
   {
@@ -3261,10 +3258,7 @@
     "                        bestScore = currentScore.mean()\n",
     "                        bestFeatures = [col1,col2,col3,col4,col5]\n",
     "print bestScore\n",
-    "print bestFeatures\n",
-    "\n",
-    "#JB I like the theory here, but would love to see complementary GridSearch also.\n",
-    "# we'll cover a better way next week"
+    "print bestFeatures\n"
    ]
   },
   {
@@ -3305,36 +3299,6 @@
     "        \n",
     "do_plot(dt, dtScore.mean().round(2))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Identify: Problem Statement & Goals\t\t\t|  29/27\n",
-    "-----------|---------------\n",
-    "Acquire: Query IMDB & write results scrape IMDB\t\t|3\n",
-    "Acquire: Select and scrape IMDB listings\t\t\t|3\n",
-    "Parse: Convert and tokenize data for both datasets\t|3\n",
-    "Parse: Join tables in local Postgres\t\t\t\t|3\n",
-    "Mine: Rename & describe data\t\t\t\t|3\n",
-    "Refine: Visualize data\t\t\t|2\n",
-    "Model: Define training set\t\t\t\t|3\n",
-    "Model: Train & test model\t\t\t\t|2\n",
-    "Present: Describe findings in formal report: summary, model, recommendations\t\t|\t2\t\n",
-    "Bonus: Scrape with BeautifulSoup  |0\n",
-    "Bonus: How is model at risk of overfitting?  |3\n",
-    "Bonus! Present: Create blog post summary\t\t|\t0\t\n",
-    "SUPER Bonus! Use cluster analysis. Encode binary categorical variables. Evaluate quality metrics & describe your findings   |2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
